# link_manager

./: .env.template  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  ername  ername,  pyproject.toml
link_manager/link_manager/: asgi.py  settings.py  wsgi.py
link_manager/links/: apps.py  urls.py
link_manager/links/business_logic/: registretionDTO.py
link_manager/links/management/commands/: export_top_users.py  populate_db.py  user_collections.xlsx
link_manager/links/migrations/: 0001_initial.py  0002_passwordresettoken.py  0003_link_created_at_link_description_link_title_and_more.py  0004_link_image_link_link_type_alter_link_description.py  0005_collection_created_at_collection_description_and_more.py  0006_link_collections.py
link_manager/links/models/: __init__.py  collection.py  email_conf.py  link.py  token.py  user.py
link_manager/links/serializers/: __init__.py  changepassword.py  collection.py  link.py  resetpassword.py  user.py
link_manager/links/views/: __init__.py  changepassword.py  collection.py  link.py  login.py  registration.py  resetpassword.py
